k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twelve-factor-demo-service
spec:
  selector:
    app: twelve-factor-demo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
  # For cloud environments consider using LoadBalancer instead of NodePort:
  # type: LoadBalancer
